plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.2.2'
    id 'io.freefair.lombok' version '6.6.3'
    id 'com.diffplug.spotless' version '8.0.0'
}

group = 'yt.graven'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    maven {
        url = 'https://jitpack.io/'
    }
}

dependencies {
    implementation "net.dv8tion:JDA:5.0.0-beta.5"
    implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.7.2'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.springframework:spring-context:5.3.39'
    implementation 'javax.inject:javax.inject:1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'club.minnced:discord-webhooks:0.8.0'
    implementation 'com.google.code.gson:gson:2.9.0'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'yt.graven.gravensupport.Main'
    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.net=ALL-UNNAMED"]
}


compileJava {
    options.encoding = "UTF-8"
    options.compilerArgs += "--enable-preview"
}

jar {
    manifest {
        attributes('Main-Class': 'yt.graven.gravensupport.Main')
    }
}


[tasks.withType(Test), tasks.withType(JavaExec)].flatten().forEach {
    it.jvmArgs += "--enable-preview"
}


spotless {
    java {
        palantirJavaFormat('2.28.0')

        importOrder()
        removeUnusedImports()
        formatAnnotations()
        trimTrailingWhitespace()
        toggleOffOn()
    }
}